--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>LIQUID | Anonymous Social Network</title>
+	<link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,32 +19,28 @@
 
 		<!-- Header -->
 			<header id="header">
-
-				<!-- Logo -->
-					<h1 id="logo">Big Picture</h1>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro">Intro</a></li>
-							<li><a href="#one">What I Do</a></li>
-							<li><a href="#two">Who I Am</a></li>
-							<li><a href="#work">My Work</a></li>
-							<li><a href="#contact">Contact</a></li>
-						</ul>
-					</nav>
-
-			</header>
-
+		<!-- Logo -->
+		<h1 id="logo">LIQUID</h1>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#intro">INTRO</a> </li>
+				<li><a href="#one">What I Do</a> </li>
+				<li><a href="#two">Who Am I</a> </li>
+				<li style="color:#0000FF"><a href="#work">DOWNLOAD LIQUID APP</a> </li>
+				<li><a href="#contact">Contact Us</a> </li>
+			</ul>
+		</nav>
+	</header>
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content container 75%">
-					<header>
-						<h2>Hey.</h2>
-					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
-					by <a href="http://html5up.net">HTML5 UP</a>, built on <strong><a href="http://getskel.com">Skel</a></strong>,
-					and released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>.</p>
+		<div class="content container 75%">
+			<header>
+				<h2>LIQUID</h2>
+         	</header>
+				<p>Welcome to <strong>ANONYMOUS SOCIAL NETWORK LIQUID </strong> by Team Liquid. Where you can<strong>
+					post, like, dislike, comment etc. </strong>and no one will come to know your identity<strong></p>
+					<p style="color:#FF0000;font-size:24px">WE all are <span style="color:#FFFFFF">LIQUID</span> inside. Let it come out....</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -56,50 +53,39 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I provide you power to express your feelings and at the same time be anonymous to your friends, relatives, competitors and everyone present in universe.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
-
 		<!-- Two -->
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>Who Am I</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I am LIQUID. YOU are LIQUID. WE all are LIQUID. EVERYONE is LIQUID. Show your inner LIQUID to everyone out there in universe.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
-
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>DOWNLOAD LIQUID APP</h2>
+						<p style="color:#0000FF">LIQUID will be available to download on ANDROID, IOS, WINDOWS smartphones soon.</p><!--<p><a href="#">CLICK HERE TO DOWNLAOD LIQUID ANDROID APP</a></p>-->
 					</header>
 
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Delhi Metro" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="The Fight" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="The frustrated Professor" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="New Crush" alt="" /></a></div>
 							</div>
-							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a></div>
-							</div>
+							
 						</div>
 
 				</div>
@@ -109,30 +95,10 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Like Us . Send Hi to.... </h2>
+						<p style="color:#FF0000;font-size:36px">myliquidapp@gmail.com</p>
+						<p>We wait for your mail.</p>
 					</header>
-					<div class="box container 75%">
-
-					<!-- Contact Form -->
-							<form method="post" action="#">
-								<div class="row 50%">
-									<div class="6u 12u(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u 12u(mobile)"><input type="email" name="email" placeholder="Email" /></div>
-								</div>
-								<div class="row 50%">
-									<div class="12u"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-								</div>
-								<div class="row">
-									<div class="12u">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-
-					</div>
 				</div>
 			</section>
 
@@ -142,8 +108,8 @@
 				<!-- Icons -->
 					<ul class="actions">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><a href="https://www.facebook.com/myliquidapp" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://plus.google.com/u/0/b/108250156180150570608/108250156180150570608/about/p/pub" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
@@ -151,7 +117,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li></li><li>Copyright @ LIQUID</li>
 					</ul>
 
 			</footer>
