--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<div class="content container">
 					<header>
 						<h2>Like Us . Send Hi to.... </h2>
-						<p style="color:#FF0000;font-size:36px">myliquidapp@gmail.com</p>
+						<p style="color:#FF0000;font-size:36px">liquid@myliquidapp.com</p>
 						<p>We wait for your mail.</p>
 					</header>
 				</div>
