--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 				<div class="content container">
 					<header>
 						<h2>DOWNLOAD LIQUID APP</h2>
-						<p style="color:#0000FF">LIQUID will be available to download on ANDROID, IOS, WINDOWS smartphones soon.</p><!--<p><a href="#">CLICK HERE TO DOWNLAOD LIQUID ANDROID APP</a></p>-->
+						<p style="color:#0000FF">LIQUID will be available to download on ANDROID, IOS, WINDOWS smartphones soon.</p>
+						<p style="color:#000000"> Click images below to zoom <p><!--<p><a href="#">CLICK HERE TO DOWNLAOD LIQUID ANDROID APP</a></p>-->
 					</header>
 
 					<!-- Lightbox Gallery  -->
@@ -107,12 +108,12 @@
 
 				<!-- Icons -->
 					<ul class="actions">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					//	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/myliquidapp" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://plus.google.com/u/0/b/108250156180150570608/108250156180150570608/about/p/pub" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					//	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+					//	<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+					//	<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 
 				<!-- Menu -->
