--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
 				<!-- Icons -->
 					<ul class="actions">
-					//	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<!--	<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<li><a href="https://www.facebook.com/myliquidapp" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://plus.google.com/u/0/b/108250156180150570608/108250156180150570608/about/p/pub" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					//	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+					<!--//	<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 					//	<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-					//	<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					//	<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 					</ul>
 
 				<!-- Menu -->
