--- a/tnc.html
+++ b/tnc.html
@@ -30,7 +30,7 @@
 				<h4>LIQUID Terms and Conditions </h4>
          	</header>
 				<p style="text-align: center;">                                                    <br>Term and conditions<br>
-Thanks for using our services. The Liquid is located at Patna in Bihar, a state in India. By using our Services, you are agreeing to these terms. Please read them carefully.  <br>
+Thanks for using our services. The Liquid is located at Patna in Bihar, a state in India. By using our Services, you are agreeing to these terms. Please read them carefully.  Liquid and myliquidapp.com menas Liquid apps on various platforms and website domains and subdomain.<br>
 There are various ways you can use our services.  With clicking ‘accept’ you agree to the term and conditions of our product. Firstly you have to create an account. Then you have to give information in order to create an account. After creating your account, you should not share your password with anyone else.<br>
 Our Services are very diverse, so sometimes additional terms or product requirements (including age requirements) may apply. Additional terms will be available with the relevant Services, and those additional terms become part of your agreement with us if you use those Services. You will be notified through emails time to time about the services and products included.<br>
 
@@ -99,7 +99,7 @@ If you use our self-service advertising creation interfaces for creation, submis
 
 Our warranties and liabilities<br>
 We provide our Services using a commercially reasonable level of skill and care and we hope that you will enjoy using them. But there are certain things that we don’t promise about our Services.<br>
-Other than as expressly set out in these terms or additional terms, neither Mukonsfes.com nor its suppliers or distributors make any specific promises about the Services. For example, we don’t make any commitments about the content within the Services, the specific functions of the Services, or their reliability, availability, or ability to meet your needs. We provide the Services “as is”.<br>
+Other than as expressly set out in these terms or additional terms, neither myliquidapp.com nor its suppliers or distributors make any specific promises about the Services. For example, we don’t make any commitments about the content within the Services, the specific functions of the Services, or their reliability, availability, or ability to meet your needs. We provide the Services “as is”.<br>
 Some jurisdictions provide for certain warranties, like the implied warranty of merchantability, fitness for a particular purpose and non-infringement. To the extent permitted by law, we exclude all warranties. We specifically tell you that we would not be liable for any warranty or guarantee. Neither the company nor the suppliers and distributors, will not be responsible for lost profits, revenues, or data, financial losses or indirect, special, consequential, exemplary, or punitive damages.<br>
 To the extent permitted by law, the total liability of  myliquidapp.com, and its suppliers and distributors, for any claims under these terms, including for any implied warranties, is limited to the amount you paid us to use the Services (or, if we choose, to supplying you the Services again).
 In all cases, we, and our suppliers and distributors, will not be liable for any loss or damage that is not reasonably foreseeable.
