--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>DOWNLOAD LIQUID APP</h2>
-						<p style="color:#0000FF">LIQUID will be available to download on ANDROID, IOS, WINDOWS smartphones soon.</p>
+						<h2>DOWNLOAD LIQUID ANDROID APP</h2>
+						<p style="color:#0000FF"><a href="https://play.google.com/store/apps/details?id=com.myliquidapp.liquid"> Click here to downlaod</a></p>
 						<p style="color:#000000"> Click images below to zoom <p><!--<p><a href="#">CLICK HERE TO DOWNLAOD LIQUID ANDROID APP</a></p>-->
 					</header>
 
